--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,4 @@
-body {background-color: 999}
+body {background-color: red}
 
 h1 {font-style: Verdana; 
   font-weight: bold;
@@ -7,4 +7,4 @@ h1 {font-style: Verdana;
 h2 {font-style: Verdana; 
   font-size: 18px}
 
-p {font-style: arial; color: Black}
+p {font-style: arial; color: red}
