--- a/styles/main.css
+++ b/styles/main.css
@@ -7,4 +7,4 @@ h1 {font-style: Verdana;
 h2 {font-style: Verdana; 
   font-size: 18px}
 
-p {font-style: arial; color: red}
+p {font-style: arial; color: blue}
