--- a/styles/style.css
+++ b/styles/style.css
@@ -1,218 +1,106 @@
 body {
-	background: #e15 url(body_bg.gif) fixed;
 	margin: 0;
 	padding: 0;
+	background: transparent url(bg.gif) no-repeat top left;
+	background-color: silver;
+	width: 1972px;
+	height: 667px;
+	font-family: Verdana; 
+	font-size: 11px;
+	line-height: 110%;
+	color: #333333;
 }
 
-/*
-////////// TYPOGRAPHY //////////
-*/
 
-p,ul,ol,li,dt,dl,dd,h1,h2,h3,h4,h5,h6 {margin: 0; padding: 0;}
 
-p { font: small/1.8em georgia, tahoma, verdana, tahoma, arial, helvetica, sans-serif; color: #333; }
-
-h1,h2,h3,h4,h5,h6 { font: 100% Arial Black, verdana, tahoma, sans-serif; }
-
-p { margin-bottom: 9px; }
-
-a {
-	color: #26a;
+h1 {font-size: 36px; font-family: sans-serif;
+	font-weight: bold;
+	color: #075E7B;
 	text-decoration: none;
+}
+
+h2 {font-family: sans-serif;
+	font-weight: bold; position: relative;
+	color: #075E7B;
+	
+}
+
+a:hover, a:active {
 	font-weight: bold;
+	color: #737373;
+	text-decoration: underline;
 }
-
-a:active {
-	color: #000;
-	border-bottom: 1px dotted #000;
-}
-
-a:visited {
-	color: #048;
-}
-
-a:hover {
-	color: #c32;
-	border-bottom: 1px dotted #c32;
-}
-
-h3 {
-	height: 20px;
-	width: 240px;
-	margin: 20px 0 7px 0;
-}
-
-.preamble h3 { background: url(head_theroad.gif) no-repeat; }
-.explanation h3 { background: url(head_sowhat.gif) no-repeat;}
-.participation h3 { background: url(head_participation.gif) no-repeat;}
-.benefits h3 { background: url(head_benefits.gif) no-repeat;}
-.requirements h3 { background: url(head_requirements.gif) no-repeat;}
-
-p:nth-child(2),p:nth-child(3),p:nth-child(4),p:nth-child(5),p:nth-child(6) { padding: 0 30px 0 20px; }
-
-abbr {
-	font-style: normal;
-	font-size: 90%;
-	letter-spacing: 1px;
-	font-weight: bold;
-	border: none;
-}
-
-header h1 {
-	width: 100%;
-	height: 100%;
-	background: transparent url(top.jpg) no-repeat;
-}
-
-.summary p:last-child {
-	margin: 10px 30px 0 0;
-	padding: 0 0 8px 0;
-	text-transform: uppercase;
-	font: 9px/20px georgia, tahoma, verdana, arial, sans-serif;
-	border-bottom: 1px dotted #333;
-}
-
-.summary p:last-child letter-spacing { text-transform: uppercase; } /* IE5/win */
-
-footer a {
-	margin: 5px 20px 0 0;
-	padding: 2px 5px;
-	border-left: 1px solid #26a;
-	border-right: 1px solid #26a;
-	font: 9px/20px georgia, tahoma, verdana, arial, sans-serif;
-	text-transform: uppercase;
-}
-
-footer a:hover {
-	background: #26a;
-	color: #fff;
-}
-
-header h2, .summary p:first-child { display: none; }
-
-header h1, h3 {
-	text-indent: 100%;
-	white-space: nowrap;
-	overflow: hidden;
-}
-
-/*
-////////// CONTAINERS //////////
-*/
 
 
 .page-wrapper {
-	margin: 0 6%;
-	background: #f4f2ea url(container_bg.jpg);
-	border-left: solid 8px #000;
-	border-right: solid 8px #000;
-	border-bottom: solid 32px #000;
+	position: absolute;
+	margin: 0px;
+	padding: 0px;
+}
+
+.intro {
+	position: absolute;
+	margin: 0px;
+	padding: 0px;
+	z-index: 1;
 }
 
 header {
-	margin: 0;
-	background: #000 url(top_bg.jpg);
-	height: 462px;
+	position: absolute;
+	margin: 0px;
+	padding: 0px;
 }
 
-footer {
-	margin: 20px 30px 50px 20px;
-	padding-top: 10px;
-	border-top: 1px dotted #000;
+header h1 {
+	z-index: 1;
+	position: absolute;
+	margin: 0px;
+	padding: 0px;
+	background: transparent url(tit.gif) no-repeat top left;
+	width: 278px;
+	height: 186px;
+	left: 25px;
+	top: 165px;
+	
+	text-indent: -9999px;
+	overflow: hidden;
 }
 
-.summary { margin-left: 250px; }
+header h2  {
+  
 
-.preamble {
-	position: relative;
-	margin-left: 230px;
-	text-align: left;
+z-index:1;
+	position: absolute;
+	margin: 0px;
+	padding: 0px;
+	background: #fff url(cat.gif) no-repeat top left;
+	width: 100%;
+  box-sizing: border-box;;
+	height: 18px;
+	left: 225px;
+	top: 40px;
+	opacity: .70;
+
+	text-indent: -9999px;
+	overflow: hidden;
 }
 
-.supporting {
-	position: relative;
-	margin-left: 230px;
-	text-align: left;
-}
-
-
-/*
-////////// LISTS //////////
-*/
-
-
-.sidebar {
-	position: absolute; 
-	top: 480px;
-	margin-left: 30px;
-	background: url(left_bg2.jpg) repeat-y top left;
-	width: 180px;
+.summary {
+	
+	position: absolute;
+	margin: 50px;
+	padding: 10px;
+	width: 390px;
+	left: 420px;
+	top: 50px;
+background: #fff;
 	
 }
 
-.sidebar .wrapper { 
-	font: 9px/12px georgia, tahoma, verdana, arial, helvetica, sans-serif;
-	text-transform: uppercase;
-	color: #333;
-	border-bottom: 5px solid #000;
-	width: 170px;
-}
-
-.sidebar ul { list-style: none; }
-
-.sidebar li {
-	margin: 0 15px;
-	border-top: 1px dotted #333;
-	padding: 8px 0;
-	text-transform: uppercase;
-}
-
-.sidebar li a {
-	display: block;
-	color: #c32;
-	font: bold 11px/16px georgia, tahoma, verdana, arial, helvetica, sans-serif;
-	text-transform: none;
-}
-
-.sidebar li a:hover { 
-	color: #000;
-	border: none;
-}
-
-.sidebar li a.designer-name {
-	color: #333;
-	font-size: 9px;
-	font-weight: normal;
-	display: inline;
-	padding: 0;
-	text-transform: uppercase;
-}
-
-.sidebar li a.designer-name:hover { color: #888; }
+.summary p  {
+	z-index:2;
+	position: relative;
+	margin: 0px;
+	padding: 6px 0px 6px 0px;
 	
-
-.design-archives li a, .zen-resources li a {
-	display: inline;
-	font-weight: normal;
-	font-size: 9px;
-	line-height: 15px;
-	padding: 0;
-	margin: 0;
-	text-transform: uppercase;
 }
-
-.design-selection h3, .design-archives h3, #lfavorites h3, .zen-resources h3 {
-	width: 170px;
-	height: 30px;
-	margin: 0 0 -1px 0;
-}
-
-.design-selection h3 { background: transparent url(left_lselect.gif) no-repeat; }
-
-.design-archives h3 { background: transparent url(left_larchives.gif) no-repeat; }
-
-#lfavorites h3 { background: transparent url(left_lfavorites.gif) no-repeat; }
-
-.zen-resources h3 { background: transparent url(left_lresources.gif) no-repeat; }
-
-
