--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,7 @@ div{text-align: center;}
 
 figure{align-content: center;}
 
+a {align-content: center;}
 
 h1 {font-size: 36px; font-family: sans-serif;
 	font-weight: bold;
