--- a/blog/styles/main.css
+++ b/blog/styles/main.css
@@ -1,10 +1,15 @@
-body {font-family: Arial; background-color: #665544;
-}
-h1 {font-size: 20px;
-  font-style: Verdana; 
-  font-weight: bold;
-  }
 
-h2 {font-size: 18px;font-style: Verdana;}
+body {background-color: grey}
 
-p {color: 'blue';font-style: arial; }
+#wrapper {}
+
+header
+
+#Contentcontainer
+
+footer
+
+#Articlecontainer
+
+aside
+
