Adding final file updates

--- a/styles/javascript-racer.css
+++ b/styles/javascript-racer.css
@@ -1,19 +1,22 @@
 .racer_table td {
   background-color: black;
-  height: 60px;
-  width: 60px;
+  height: 50px;
+  width: 50px;
 }
 
 .racer_table td.active {
   background-color: white;
+  background-image: url(../car-icon.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 td {
     vertical-align: baseline;
     padding: 0px ;
+   
 }
-
 .container{
    margin: auto;
-  width: 112px;
+  width: 255px;
 }
