--- a/javascript-racer/javascript-racer.css
+++ b/javascript-racer/javascript-racer.css
@@ -6,7 +6,7 @@
 
 .racer_table td.active {
   background-color: white;
-  background-image: url(../car-icon.jpg);
+  background-image: url(car-icon.jpg);
   background-repeat: no-repeat;
   background-position: center;
 }
